<resources>
    <string name="app_name">Robot_arm_app</string>
    <string name="refresh">refresh</string>
    <string name="servo1">servo1</string>
    <string name="servo2">servo2</string>
    <string name="servo3">servo3</string>
    <string name="drive">Drive</string>
    <string name="button">Button</string>
    <string name="left">Button</string>
    <string name="right">left</string>
    <string name="down">Button</string>
    <string name="stop">stop</string>
    <string name="report">Report</string>
    <string name="disconnect">disconnect</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="all_the_inserted_records">All the inserted records.</string>
    <string name="no_records_available">No records available!!!</string>
    <string name="email_id">Email ID</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="add_record">ADD RECORD</string>
    <string name="update_record">Update Record</string>
    <string name="cancel">CANCEL</string>
    <string name="enter_location">enter location</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="number">Number</string>
    <string name="location">location</string>
    <string name="Location">Location</string>
    <string name="item_name">Item Name</string>
    <string name="enter_name_of_item_picked">enter name of item picked</string>
    <string name="enter_number_of_items_picked">enter Number Of Items picked</string>
    <string name="location_">Location</string>
    <string name="enter_location_">enter location</string>
    <string name="item">Item</string>
    <string name="enter_name_of_item">enter name of item</string>
    <string name="number_of_items">number of items</string>
    <string name="enter_number_of_items">enter number of items</string>
</resources>